--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
           <button id="btnMatematica">Matemática</button>
           <button id="btnFisica">Física</button>
         </div>
+         <!-- GIF decorativo e clicável -->
+  <a href="https://www.instagram.com/profronaldo2025/" target="_blank" id="corner-gif-link">
+    <img src="Artboard 1.gif" id="corner-gif" alt="Instagram Prof. Ronaldo">
+  </a>
       </div>
       <h1 id="disciplinaTitulo" style="display:none;">Selecione uma disciplina</h1>
       <div id="disciplinaDescricao" style="display:none; color:#FFD34E; font-size:15px; margin-bottom:10px; text-align:center; opacity:0.85;"></div>
